--- a/Connect Hub/Base.lproj/Main.storyboard
+++ b/Connect Hub/Base.lproj/Main.storyboard
@@ -1,24 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Connect_Hub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="168E3A9E-A9FB-429A-8741-5116FC1B779C" translatesAutoresizingMaskIntoConstraints="NO" id="sGM-H3-ziV">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="81" translatesAutoresizingMaskIntoConstraints="NO" id="aBH-oV-kQG" userLabel="NewUserStack">
+                                <rect key="frame" x="20" y="576" width="374" height="38"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2j-NP-4LS">
+                                        <rect key="frame" x="0.0" y="0.0" width="127" height="38"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <state key="normal" title="New User?">
+                                            <color key="titleColor" red="0.0" green="1" blue="0.92779093980789185" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SqX-Od-Ogr">
+                                        <rect key="frame" x="208" y="0.0" width="166" height="38"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <state key="normal" title="Unable to Login?">
+                                            <color key="titleColor" red="0.0" green="1" blue="0.92779093980789185" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpD-pu-nzF">
+                                <rect key="frame" x="90" y="770" width="234" height="33"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="What is Connect Hub?">
+                                    <color key="titleColor" red="0.0" green="1" blue="0.92779093980789185" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="CqV-YH-hjq">
+                                <rect key="frame" x="20" y="300" width="374" height="200"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter User Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lJt-3Q-YLX">
+                                        <rect key="frame" x="20" y="0.0" width="334" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ezR-qI-6dh">
+                                        <rect key="frame" x="20" y="81" width="334" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iE2-0x-vqF">
+                                        <rect key="frame" x="155" y="162" width="64" height="38"/>
+                                        <color key="backgroundColor" red="0.0" green="1" blue="0.92779093980789185" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <state key="normal" title="Login">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="iE2-0x-vqF" firstAttribute="leading" secondItem="CqV-YH-hjq" secondAttribute="leading" constant="155" id="2hS-cO-YVV"/>
+                                    <constraint firstAttribute="trailing" secondItem="iE2-0x-vqF" secondAttribute="trailing" constant="155" id="E9f-px-E7G"/>
+                                    <constraint firstItem="lJt-3Q-YLX" firstAttribute="leading" secondItem="CqV-YH-hjq" secondAttribute="leading" constant="20" id="Jxz-l4-wjh"/>
+                                    <constraint firstAttribute="trailing" secondItem="lJt-3Q-YLX" secondAttribute="trailing" constant="20" id="bTb-Ig-xBZ"/>
+                                    <constraint firstItem="ezR-qI-6dh" firstAttribute="leading" secondItem="CqV-YH-hjq" secondAttribute="leading" constant="20" id="eWd-N5-dXe"/>
+                                    <constraint firstAttribute="trailing" secondItem="ezR-qI-6dh" secondAttribute="trailing" constant="20" id="jO4-hh-Ebr"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sGM-H3-ziV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8TK-fa-wzQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hpD-pu-nzF" secondAttribute="bottom" constant="59" id="P1b-kX-Qhi"/>
+                            <constraint firstAttribute="bottom" secondItem="sGM-H3-ziV" secondAttribute="bottom" id="QGG-d4-NBW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hpD-pu-nzF" secondAttribute="trailing" constant="90" id="QpT-JS-KYS"/>
+                            <constraint firstItem="sGM-H3-ziV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UiD-re-H5E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aBH-oV-kQG" secondAttribute="trailing" constant="20" id="Z8C-57-xK3"/>
+                            <constraint firstItem="CqV-YH-hjq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="aQg-BB-DM8"/>
+                            <constraint firstItem="hpD-pu-nzF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="90" id="aUK-CV-8Yv"/>
+                            <constraint firstItem="aBH-oV-kQG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fn1-7N-gTz"/>
+                            <constraint firstItem="aBH-oV-kQG" firstAttribute="top" secondItem="CqV-YH-hjq" secondAttribute="bottom" constant="76" id="o8M-Pl-CVG"/>
+                            <constraint firstItem="sGM-H3-ziV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qvH-7x-V24"/>
+                            <constraint firstItem="hpD-pu-nzF" firstAttribute="top" secondItem="aBH-oV-kQG" secondAttribute="bottom" constant="156" id="re7-EV-SgT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CqV-YH-hjq" secondAttribute="trailing" constant="20" id="rrS-bu-xCU"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33.333333333333336" y="18.080357142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="168E3A9E-A9FB-429A-8741-5116FC1B779C" width="1080" height="1920"/>
+    </resources>
 </document>
