Progress HUD added

--- a/Connect Hub/Base.lproj/Main.storyboard
+++ b/Connect Hub/Base.lproj/Main.storyboard
@@ -10,6 +10,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="25m-LS-Yde">
+            <objects>
+                <viewController id="leX-4q-XNq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cvd-ow-IOE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0gZ-3g-TfK"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oUK-e6-ZFg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="33" y="-648"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -109,6 +124,7 @@
                         <outlet property="LoginBtn" destination="iE2-0x-vqF" id="ZqF-bO-FrS"/>
                         <outlet property="passwordTxtField" destination="ezR-qI-6dh" id="Oqw-bT-yZk"/>
                         <outlet property="userNameTxtField" destination="lJt-3Q-YLX" id="DPQ-y3-nsv"/>
+                        <segue destination="leX-4q-XNq" kind="show" identifier="goToLogin" id="gmf-Lu-Q1t"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -223,8 +239,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Q0v-NM-Vqd"/>
                     </view>
-                    <navigationItem key="navigationItem" id="yJ6-ru-MgY"/>
+                    <navigationItem key="navigationItem" id="yJ6-ru-MgY">
+                        <barButtonItem key="rightBarButtonItem" title="Back to Login" id="bIW-ub-nlO">
+                            <connections>
+                                <action selector="BackToLgnBtnTapped:" destination="IbQ-5l-TVG" id="w3e-mC-y9V"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="backToLgnBtn" destination="bIW-ub-nlO" id="EgK-q6-Jwh"/>
                         <outlet property="cityTextField" destination="Shh-aZ-09b" id="Ioc-Gu-S1Z"/>
                         <outlet property="contactTextField" destination="p2t-C2-E8c" id="ula-Ue-scN"/>
                         <outlet property="dobTxtField" destination="emm-Ih-S0y" id="2Xh-0I-htf"/>
